--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,8 @@
   "theme_color": "#000000",
   "orientation": "portrait-primary",
   "scope": "/",
- 
+  "lang": "en",
+  "dir": "ltr",
   "icons": [
     {
       "src": "/icons/icon-72x72.svg",
@@ -59,7 +60,5 @@
       "purpose": "any"
     }
   ],
-  "categories": ["productivity", "utilities"],
-  "lang": "en",
-  "dir": "ltr"
+  "categories": ["productivity", "utilities"]
 }
