--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "tsx utils/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
+    "mongoose": "^8.19.2",
     "next": "15.5.4",
     "next-pwa": "^5.6.0",
+    "prisma": "^6.18.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
@@ -26,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
