--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "axios": "^1.13.1",
     "mongoose": "^8.19.2",
     "next": "15.5.4",
     "next-pwa": "^5.6.0",
