--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
+    "@react-pdf/renderer": "^4.3.1",
     "axios": "^1.13.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "next": "15.5.4",
     "next-pwa": "^5.6.0",
     "prisma": "^6.18.0",
