--- a/package.json
+++ b/package.json
@@ -15,26 +15,26 @@
     "axios": "^1.13.2",
     "jspdf": "^3.0.3",
     "jspdf-autotable": "^5.0.2",
-    "next": "15.5.4",
-    "next-pwa": "^5.6.0",
-    "prisma": "^6.18.0",
+    "next": "^16.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "next-pwa": "^5.6.0",
+    "prisma": "^6.18.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.3.0"
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/minimatch": "^6.0.0",
     "@types/next-pwa": "^5.6.9",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
+    "@types/node": "^22.10.0",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "15.1.6",
+    "tailwindcss": "^4.0.3",
     "tsx": "^4.20.6",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
